--- a/less/forum.less
+++ b/less/forum.less
@@ -1,35 +1,38 @@
 .Badge--cakeday {
-    background-color: #FFD449;
+  background-color: #FFD449;
 }
 
-.AnniversariesList-users {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    gap: 1rem;
-    grid-template-columns: repeat(4, auto);
-
-    &, .user {
-        display: grid;
-    }
-
-    .user {
-        grid-template-columns: 48px auto;
-        gap: 0 .5rem;
-
-        .username {
-            max-width: 100px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-    }
+.NearataCakeday {
+  .users {
+    display: grid;
+    gap: .5rem;
+    grid-template-columns: repeat(5, 1fr);
 
     @media @phone {
-        grid-template-columns: repeat(2, auto);
+      grid-template-columns: repeat(2, auto);
     }
-}
+  }
 
-.AnniversariesList-loadMore {
+  .AnniversariesListItem {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 48px 1fr;
+    gap: .5rem;
+
+    .avatar {
+      max-width: 48px;
+    }
+
+    .details .username {
+      max-width: 100px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+
+  .loadMore {
     text-align: center;
     margin-top: 1rem;
+  }
 }
